export enum LeaveType {
  Vacation = 'Vacation',
  Sick = 'Sick',
  Personal = 'Personal',
}
