export enum RoleType {
  Employee = 'Employee',
  Manager = 'Manager',
  Admin = 'Admin',
}
